--- a/asd/package.json
+++ b/asd/package.json
@@ -3,6 +3,8 @@
     "flowbite": "^2.5.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
