--- a/asd/package.json
+++ b/asd/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "pyasd-webapp",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "flowbite": "^2.5.2"
+    "flowbite": "^2.5.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.13",
