aggiungi librerie utili

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 asgiref==3.8.1
+defusedxml==0.7.1
 Django==5.1.1
 django-appconf==1.0.6
 django-compressor==4.5.1
+django-treebeard==4.7.1
+Faker==30.5.0
+fonttools==4.54.1
+fpdf2==2.8.1
+Markdown==3.7
+ofxtools==0.9.5
+pillow==11.0.0
+python-dateutil==2.9.0.post0
 rcssmin==1.1.2
 rjsmin==1.2.2
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.2
